# sprout-hdl

./: .gitignore  .gitlab-ci.yml  LICENCE  README.md  README_cores_extras.md  aag_loader_writer.py  aig_test.py  aigerverse_aag_loader_writer.py  basic_logic.py  debug.py  debug_corectness.py  debug_sub.py  file.txt  optimize_and_check.py  prefix_adder.py  pyproject.toml  requirements.txt  roundtrip.py  sprout_hdl.py  sprout_hdl_aiger.py  sprout_hdl_analyzer.py  sprout_hdl_float.py  sprout_hdl_float_bk.py  sprout_hdl_float_sn.py  sprout_hdl_module.py  sprout_hdl_sim.py  sprout_hdl_simulator.py  sprout_hdl_test.py  sprout_hdl_test_sim.py  sprout_io_collector.py  sprout_sequential_mac.py  sweep_fp_mul.py  yosys_extract_metrics.py
examples/: README.md  simple_component.py
low_level_arithmetic/: compressor_tree_accumulator_stages.py  compressor_tree_direct_sprout_hdl.py  compressor_tree_direct_sprout_hdl_basic_stages.py  compressor_tree_direct_sprout_hdl_baugh_wooley_stages.py  compressor_tree_direct_sprout_hdl_booth.py  compressor_tree_direct_sprout_hdl_booth_optim.py  compressor_tree_direct_sprout_hdl_booth_optim_signed.py  compressor_tree_direct_sprout_hdl_booth_optim_signed_stages.py  compressor_tree_direct_sprout_hdl_booth_optim_stages.py  compressor_tree_direct_sprout_hdl_booth_unoptim.py  compressor_tree_direct_sprout_hdl_booth_unoptim_stages.py  compressor_tree_multiplier.py  compressor_tree_multiplier_ex1.py  compressor_tree_multiplier_ex3.py  compressor_tree_sprout_hdl.py  fsa_stages.py  multiplier_stage_core.py  multiplier_stage_options_demo.py  multiplier_stage_options_demo_ext.py  multiplier_stage_options_demo_ext_stat.py  multiplier_stage_options_demo_ext_stat_helper.py  multiplier_stage_options_demo_lib.py  multiplier_stage_options_demo_list.py  multiplier_stage_plot.py  multiplier_stage_plot2.py  multipliers_ext_optimized.py  mutipliers_ext.py  ppa_stages.py  ppg_basic_stages.py  ppg_baugh_wooley_stages.py  ppg_booth_optim_signed_stages.py  ppg_booth_optim_stages.py  ppg_booth_unoptim_stages.py  prefix_adder.py  prefix_adder_stage.py  prefix_adder_transform.py  test_stage_multipliers.py  test_vector_generation.py
sprouthdl/: aigerverse_aag_loader_writer.py  helpers.py  sprout_hdl_aiger.py  sprout_hdl_analyzer.py  sprout_hdl_module.py  sprout_hdl_simulator.py  sprout_io_collector.py  sprouthdl.py  sprouthdl_aiger.py  sprouthdl_io_collector.py  sprouthdl_module.py  sprouthdl_simulator.py  sprouthdl_verilog_testbench.py  yosys_extract_metrics.py
testing/: debug_corectness.py  optimize_and_check.py  roundtrip.py  sweep_fp_mul.py  test_aggregate_array.py  test_array.py  (+23 more)
(+263 files in other folders)
