[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "sprouthdl"
version = "0.0.0"
description = "Sprout HDL is a hardware description language for digital circuits."
authors = [{ name = "Felix Arnold", email = "felix.arnold@h-partners.com" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = [
    "dependencies"
]

# Tell hatchling what to put into the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/sprouthdl"]
include = [
    "src/sprouthdl/arithmetic/int_multipliers/data/**",
]

# Optional but nice: also define sdist the same way
[tool.hatch.build.targets.sdist]
packages = ["src/sprouthdl"]
include = [
    "src/sprouthdl/arithmetic/int_multipliers/data/**",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.ruff]
line-length = 120
